--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row" style="background-color:white;height: 80px;">
+        <div class="row header" style="background-color:white;height: 80px;">
             <div class="col col-lg-10 col-md-8 col-sm-6">
                <a href="#" class="logo" style="text-decoration: none;"><h3 style="font-size: 1.5rem;font-weight: bolder;color: #000000;padding-top: 20px;padding-left: 20px;" id="headline">Men's Trendy</h3></a>
               </div>
